--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola, Soy guapo, rico y buen jugador</p>
+    <p>Soy guapo, rico y buen jugador</p>
 </body>
 </html>
